# TheSmallestHardTreesPython

./: .gitmodules  Cargo.toml  README.md
Python/: ArcConFast.py  Identities.py  Structures.py  main.py  treeGeneration.py
crates/arx/: Cargo.toml  README.org  todo.org
crates/arx/examples/: sikaku.rs  sikaku.txt  sikaku2.txt
crates/arx/src/: domains.rs  lib.rs  problem.rs  solver.rs
crates/arx/src/consistency/: ac.rs  mod.rs  pc.rs  sac.rs
crates/tripolys/: Cargo.toml
crates/tripolys/src/tripolys/: lib.rs
crates/tripolys/src/tripolys/algebra/: homomorphism.rs  metaproblem.rs  mod.rs
crates/tripolys/src/tripolys/algebra/conditions/: custom.rs  hageman_mitschke.rs  hobby_mckenzie.rs  jonsson.rs  kearnes_kiss.rs  kiss_kearnes.rs  kmm.rs  maltsev.rs  mod.rs  near_unamity.rs  noname.rs  quasi_majority.rs  siggers.rs  sigma.rs
crates/tripolys/src/tripolys/colouring/: mod.rs  problem.rs
crates/tripolys/src/tripolys/digraph/: adj_map.rs  adj_matrix.rs  classes.rs  formats.rs  levels.rs  mod.rs  traits.rs
crates/tripolys/src/tripolys/hcoloring/: mod.rs  problem.rs
crates/tripolys/src/tripolys/tree/: generate.rs  mod.rs  node.rs  triad.rs
scripts/: slurm_taurus_srun.sh
