[package]
name = "tripolys"
version = "0.1.0"
authors = ["Michael Wernthaler <michael.wernthaler@posteo.de>"]
edition = "2021"

[dependencies]
colored = "2.0"
clap = "2.33.0"
rayon = "1.5"
itertools = "0.10.1"
bit-vec = "0.6.3"
arx = { path = "../arx" }
serde = { version = "1.0", features = ["derive", "rc"]}
csv = "1.1.6"
time = "0.2.26"

[lib]
name = "tripolys"
path = "src/tripolys/lib.rs"

[[bin]]
name = "tripolys"
path = "src/bin/tripolys/main.rs"
test = false
doc = false

