[package]
name = "tripolys"
version = "0.1.0"
authors = ["Michael Wernthaler <michael.wernthaler@posteo.de>"]
edition = "2021"

[dependencies]
colored = "2.0"
clap = "2.33.0"
rayon = "1.5"
itertools = "0.10.1"
bit-vec = "0.6.3"
arx = { path = "../arx" }
serde = { version = "1.0", features = ["derive", "rc"]}
csv = "1.1.6"
indexmap = "1.8.1"
num-traits = "0.2"
num-iter = "0.1.33"
bimap = "0.6.2"
thiserror = "1.0.31"

[lib]
name = "tripolys"
path = "src/tripolys/lib.rs"

[[bin]]
name = "tripolys"
path = "src/bin/tripolys/main.rs"
test = false
doc = false

